--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
           <h1>Get <span>insights</span> that help your business grow.</h1>
 
           <p>
-            Discover the benefits of data <br />
-            analytics and make better decisions <br />
-            regarding revenue, customer <br />
-            experience, and overall efficiency.
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
           </p>
         </header>
 
