--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="card-container">
+    <div class="card-container fade-in-left">
       <div class="image-container">
         <div class="overlay"></div>
         <div class="image"></div>
